--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Kyojiro Rengoku </title>
+	<title> Kyojuro Rengoku </title>
 	<link rel="icon" href="img/rengoku-avatar.jpg">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Girassol&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Goblin+One&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 
 </head>
 <body>
 	<!--Header element -->
 	<header>
 		<img src="img/rengoku-avatar.jpg">
-		<h1> Kyojiro rengoku</h1>
+		<h1> Kyojuro rengoku</h1>
 	</header>
 
 	<!-- main element -->
 	<main>
-		<h2>About Kyojiro Rengoku</h2>
-		<p>Kyojiro Rengoku is the flame hashira</p>
+		<h2>About Kyojuro Rengoku</h2>
+		<p>Kyojuro Rengoku is the flame hashira. Kyojuro is greatly enthusiastic in regard to his duties as a Hashira, and often came across as cheerfully eccentric. He is amiable, pure of heart and boasted extraordinary technique and swordsmanship stemming from strict practice and discipline. </p>
 		<img src="img/hashira.png">
-		<p> Kyojiro and his friends </p>
+		<p class="caption">  Kyojuro and his friends </p>
 		<ol>
 			<li>He is a good person</li>
 			<li>He is a great swordsman</li>
@@ -35,7 +40,7 @@
 
 	<!-- Footer -->
 	<footer>
-		<p>This site was created during a Tap Tap Kaboom class. &copy; nunongpins23 </p>
+		<p>&copy; nunongpins23 </p>
 	</footer>
 
 </body>
